--- a/html/css/chat.css
+++ b/html/css/chat.css
@@ -1,228 +1,330 @@
 @font-face {
-  src: url('../assets/RobotoMono-Regular.ttf');
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: normal;
+    src: url('../assets/RobotoMono-Regular.ttf') format('truetype');
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: normal;
 }
 
 @font-face {
-  src: url('../assets/MI.woff2');
-  font-family: 'MI';
-  font-style: normal;
-  font-weight: normal;
+    src: url('../assets/MI.woff2') format('woff2');
+    font-family: 'MI';
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    src: url('../assets/NotoSans-Regular.ttf') format('truetype');
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: normal;
 }
 
 :root {
-  --mainbradius: 5px;
-  --avatarbradius: 5px;
+    --mainbradius: 5px;
+    --avatarbradius: 5px;
+    --font: 'Noto Sans', sans-serif;
 }
 
 * {
-  padding: 0;
-  margin: 0;
-  font-family: 'Roboto Mono', Monospace;
+    padding: 0;
+    margin: 0;
+    font-family: var(--font);
 }
 
 body {
-  background-color: #001e1d;
-  color: #e8e4e6;
+    background-color: #001e1d;
+    color: #e8e4e6;
 }
 
 .emptych {
-  text-align: center;
-  margin-top: 2em;
+    text-align: center;
+    margin-top: 2em;
 }
 
 main {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .emptych_img {
-  border-radius: var(--avatarbradius);
-  width: 100px;
+    border-radius: var(--avatarbradius);
+    width: 100px;
 }
 
 .subtitle {
-  font-size: 12px;
-  color: gray;
+    font-size: 12px;
+    color: gray;
 }
 
 .mention {
-  background: rgba(114, 137, 218, 0.4);
-  border-radius: var(--mainbradius);
-  padding: 2px;
+    background: rgba(114, 137, 218, 0.4);
+    border-radius: var(--mainbradius);
+    padding: 2px;
 }
 
 .mi {
-  font-family: 'MI';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  vertical-align: middle;
+    font-family: 'MI';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    vertical-align: middle;
 }
 
 header {
-  background-color: #757575;
-  padding: 10px;
-  text-align: center;
-  border-bottom: 1px solid #fff;
-  color: #eee;
+    background-color: #757575;
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #fff;
+    color: #eee;
 }
 
 .plbtn {
-  float: right;
-  cursor: pointer;
+    float: right;
+    cursor: pointer;
 }
 
 .menubtn {
-  cursor: pointer;
-  float: left;
+    cursor: pointer;
+    float: left;
 }
 
 .header_chname {
-  font-weight: bold;
-  padding: 4px;
-  border: 2px solid #dbdbdb;
-  border-radius: var(--mainbradius);
+    font-weight: bold;
+    padding: 4px;
+    border: 1px solid #dbdbdb;
+    border-radius: var(--mainbradius);
 }
 
 details,
 summary,
 input,
-button {
-  outline: none;
+button,
+select,
+textarea {
+    outline: none;
 }
 
 summary {
-  cursor: pointer;
+    cursor: pointer;
+    padding: .3em;
+}
+
+details[open] summary {
+    border-bottom: 1px solid #555;
+    margin-bottom: .5em;
 }
 
 details {
-  border: 1px solid #333;
-  padding: 4px;
-  width: 200px;
-  padding: 8px;
-  border-radius: var(--mainbradius)
+    border: 1px solid #444;
+    padding: 4px;
+    width: 200px;
+    padding: 8px;
+    border-radius: var(--mainbradius);
+    margin-top: 1em;
 }
 
+#mainmenu-channels_channelslist {
+    overflow: auto;
+    height: 300px;
+    scrollbar-width: thin;
+}
+
+.menu_label {
+    font-size: 10px;
+}
+
+#settings_font {
+    font-size: 10px;
+    background-color: #4f545c;
+    border: 1px solid #777;
+    border-radius: 5px;
+    color: #dbdbdb;
+    padding: 2px;
+}
+
+select,
+option {
+    cursor: pointer;
+}
 
 .shade {
-  background: rgb(0, 0, 0, 0.6);
-  z-index: 998;
-  width: 100%;
-  height: 100%;
-  position: fixed;
+    background: rgb(0, 0, 0, 0.6);
+    z-index: 998;
+    width: 100%;
+    height: 100%;
+    position: fixed;
 }
 
 .mainmenu {
-  z-index: 999;
-  background-color: #777;
-  color: #eee;
-  position: fixed;
-  text-align: center;
-  height: 100vh;
-  padding: 8px;
-  width: 230px;
+    z-index: 999;
+    background-color: #212121;
+    color: #eee;
+    position: fixed;
+    text-align: center;
+    height: 100vh;
+    padding: 8px;
+    width: 230px;
+    overflow: hidden;
+}
+
+.channelslist_channel {
+    background-color: #363436;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-top: 7px;
+    text-align: left;
+}
+
+.channelslist_channelicon {
+    width: 35px;
+    vertical-align: middle;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+.channelslist_channelname {
+    font-size: 14px;
+    vertical-align: middle;
 }
 
 .plistmenu {
-  z-index: 999;
-  background-color: #777;
-  color: #eee;
-  position: fixed;
-  text-align: center;
-  height: 100vh;
-  padding: 8px;
-  right: 0;
-  width: 230px;
-  overflow: scroll;
+    z-index: 999;
+    background-color: #212121;
+    color: #eee;
+    position: fixed;
+    text-align: center;
+    height: 100vh;
+    padding: 8px;
+    right: 0;
+    width: 230px;
+    overflow: scroll;
 }
 
 .closebtn {
-  font-size: 16px;
-  border-radius: var(--mainbradius);
-  padding: 3px;
-  float: right;
-  cursor: pointer;
-  color: #555;
-  border: 1px solid #555;
-  font-size: 14px;
+    font-size: 16px;
+    border-radius: var(--mainbradius);
+    padding: 3px;
+    float: right;
+    cursor: pointer;
+    color: #999;
+    border: 2px solid #555;
+    font-size: 14px;
+    line-height: 1.0;
 }
 
 .closebtn:hover {
-  color: #fff;
-  border: 1px solid #fff;
+    color: #fff;
+    border: 2px solid #999;
 }
 
 input[type="checkbox"] {
-  vertical-align: middle;
-  margin-right: 1em;
+    margin-right: 1em;
 }
 
-.plmembers>.mention {
-  margin-top: 6px;
-  border: 1px solid #fff;
+.plmembers .mention {
+    margin-top: 6px;
+    border: 1px solid #fff;
 }
 
 .messages {
-  overflow: scroll;
-  height: 400px;
-}
-
-.img_avatar {
-  width: 40px;
-  height: 40px;
-  border-radius: var(--avatarbradius);
-  float: left;
-  vertical-align: middle;
-  margin-left: 5px;
+    display: block;
+    margin: auto;
+    overflow-y: scroll;
+    height: 400px;
+    width: 500px;
+    scrollbar-width: thin;
 }
 
 .msg_author {
-  vertical-align: top;
-  font-weight: bold;
-  font-size: 16px;
-  margin-left: 1em;
+    vertical-align: top;
+    font-weight: bold;
+    font-size: 16px;
+    margin-left: 1em;
 }
 
 .msg_text {
-  font-size: 12px;
-  margin-left: 60px;
+    font-size: 12px;
+    margin-left: 20px;
 }
 
 .msgbox {
-  text-align: center;
-  position: fixed;
-  bottom: 5px;
-  width: 100%;
-  padding: 8px;
-  background-color: #001e1d
+    text-align: center;
+    position: fixed;
+    bottom: 5px;
+    width: 100%;
+    padding: 8px;
 }
 
 .msgbox_input {
-  padding: 8px;
-  border-radius: 5px;
-  width: 260px;
-  border: 1px solid gray;
-  background-color: #333;
-  color: #fff;
-  vertical-align: middle
+    padding: 8px;
+    border-radius: 5px;
+    width: 400px;
+    font-size: 14px;
+    border: 1px solid #555;
+    background-color: #333;
+    color: #fff;
+    vertical-align: middle;
+    resize: none;
+    scrollbar-width: thin;
 }
 
 .msgbox_input:hover {
-  border: 1px solid lightgray;
+    border: 1px solid #777;
+}
+
+.msgbox_input:focus {
+    border: 1px solid #999;
 }
 
 #sendmsgBtn {
-  display: none;
-  border: 0;
-  background-color: royalblue;
-  padding: 5px;
-  color: #fff;
-  line-height: 1.0;
-  border-radius: var(--mainbradius);
+    display: none;
+    border: 0;
+    background-color: royalblue;
+    padding: 5px;
+    color: #fff;
+    line-height: 1.0;
+    border-radius: var(--mainbradius);
 }
 
 .msg {
-  margin-top: 1em;
+    margin-top: 1em;
+}
+
+.msg_time {
+    font-size: 10px;
+    color: #555;
+    font-weight: 400;
+    float: right;
+    margin-right: 2em;
+    margin-top: 5px;
+}
+
+.badge {
+    background-color: cornflowerblue;
+    border-radius: var(--mainbradius);
+    padding: 1px 7px;
+    line-height: 1.0;
+    font-size: 10px;
+    color: #dbdbdb;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: 1px;
+}
+
+@media only screen and (max-width: 800px) {
+    .messages {
+        width: 300px;
+        height: 330px;
+    }
+
+    #sendmsgBtn {
+        display: inline;
+    }
+
+    .msgbox_input {
+        width: 230px;
+    }
+
+    .msg_time {
+        font-size: 9px;
+    }
 }
