--- a/html/css/join.css
+++ b/html/css/join.css
@@ -5,18 +5,24 @@ Thanks to happyhues.co for colors
 @font-face {
   src: url('../assets/RobotoMono-Regular.ttf') format('truetype');
   font-family: 'Roboto Mono';
+  font-display: swap;
 }
 
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Roboto Mono', sans-serif;
+  box-sizing: border-box;
 }
 
 body {
   text-align: center;
   background-color: #001e1d;
   color: #e8e4e6;
+}
+
+main {
+  margin-top: 5em;
 }
 
 h1,
@@ -31,19 +37,29 @@ b {
 }
 
 a {
-  color: #e16162;
+  color: #555;
   text-decoration: none;
 }
 
+label {
+  margin-right: 200px;
+  font-size: 12px;
+  color: #777;
+}
+
 a:hover {
-  border-bottom: 1px solid #e16162;
+  color: dodgerblue;
+  border-bottom: 1px solid dodgerblue;
 }
 
 input {
+  width: 200px;
   border-radius: 5px;
   padding: 8px;
   margin-top: 1em;
   border: 0;
+  background-color: #333;
+  color: #eee;
 }
 
 button {
@@ -58,11 +74,8 @@ input:invalid {
   font-size: 10px;
   margin-top: 2em;
   font-weight: bold;
+  color: #555;
   text-align: center;
-}
-
-#toslbl {
-  vertical-align: middle;
 }
 
 .btn-green {
@@ -71,18 +84,11 @@ input:invalid {
   color: #eee;
   padding: 8px;
   border-radius: 3px;
+  font-size: 18px;
+  margin-top: 1em;
 }
 
 .btn-green:disabled {
   color: #222;
-  background-color: #144c1d;
-}
-
-#randnick {
-  font-size: 10px;
-}
-
-code {
-  background-color: #555;
-  border-radius: 3px;
+  opacity: 0.5;
 }
