--- a/html/css/tos.css
+++ b/html/css/tos.css
@@ -18,10 +18,19 @@ h1 {
 }
 
 ul {
-  margin-left: 50px;
+  margin-left: 16px;
+  list-style: none;
 }
 
 a {
   font-size: 18px;
   color: #ff8c00;
+}
+
+.content {
+  max-width: 800px;
+}
+
+.lastupd {
+  text-align: center;
 }
