--- a/html/css/components/msginput.css
+++ b/html/css/components/msginput.css
@@ -11,7 +11,6 @@ file upload dialog
 */
 
 .msgbox {
-    padding: 16px;
     text-align: center;
     position: fixed;
     bottom: 5px;
@@ -46,7 +45,6 @@ file upload dialog
 }
 
 #sendmsgBtn {
-    display: none;
     border: 0;
     background-color: royalblue;
     padding: 5px;
@@ -56,21 +54,19 @@ file upload dialog
     border-radius: var(--mainbradius);
 }
 
-#sendmsgBtn:disabled {
-    opacity: 0.3;
-    cursor: not-allowed;
-}
-
 .selectEmojiBtn {
+    display: inline-block;
     background-color: transparent;
     line-height: 1.0;
     padding: 3px;
     border-radius: var(--mainbradius);
     color: var(--headerClr);
-    margin-left: -5em;
+    margin-right: 3em;
 }
 
 .selectFileBtn {
+    display: inline;
+
     background-color: transparent;
     line-height: 1.0;
     padding: 3px;
